@@ -2,6 +2,7 @@
 v3.0.7-git
 ----------
 
+[jan] SECURITY: Fix open redirects.
 
 
 ------
